syntax = "proto3";

option java_package = "com.example.demo";
option java_multiple_files = true;

service ExampleService {
    rpc isAllowedToCheckSalary (ExampleRequest) returns (ExampleResponse);
}

message ExampleRequest {
    string currentUser = 1;
    string employee = 2;

}

message ExampleResponse {
    bool isAllowed = 1;
}